# oxide

./: Cargo.toml
attacks/: Cargo.toml
attacks/src/: king.rs  knight.rs  lib.rs  pawn.rs  sliding.rs
interface/: Cargo.toml
interface/src/: lib.rs  types.rs
interface/src/engine/: board.rs  mod.rs  score.rs  zobrist.rs
interface/src/game/: bitboard.rs  board.rs  boardmask.rs  castle.rs  chess_move.rs  line.rs  mod.rs  piece.rs  position.rs  shiftable.rs  side.rs  square.rs
move-gen/: Cargo.toml
move-gen/src/: lib.rs
move-gen/src/attacks/: knight.rs  mod.rs  sliding.rs
move-gen/src/attacks/sliding/sliding_attack_lookup/: mod.rs  pdep.rs  pext.rs
oxide-interface/: Cargo.toml
oxide-interface/src/: lib.rs
oxide-interface/src/engine/: mod.rs  score.rs  zobrist.rs
oxide-interface/src/engine/board/: mod.rs
oxide-interface/src/engine/position/: mod.rs  piece_arrangement.rs
oxide-interface/src/game/: castle.rs  mod.rs  piece.rs  side.rs  square.rs
oxide-interface/src/game/chess_move/: mod.rs  move_type.rs  simple_move.rs  test.rs
oxide-interface/src/game/oxide_bitboard/: bench.rs  fill_macros.rs  line.rs  mask_iter.rs  mod.rs  numeric_impl.rs  pop_square.rs  shiftable.rs  test.rs
uci-engine/: Cargo.toml
uci-engine/src/: main.rs
