[package]
name = "move-gen"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
interface = { path = "../interface" }
attacks = { path = "../attacks" }
smallvec = { version = "1.6.1", features = ["const_generics", "union", "specialization"] }

[dev-dependencies]
oxide-interface = { path = "../oxide-interface" }