[package]
name = "oxide-interface"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = 1

[features]
default = ["line_table"]
line_table = ["lazy_static"]

[dependencies]
interface = { path = "../interface" }
lazy_static = { version = "1.4.0", optional = true }